Fix for tables having left-aligned rather than center aligned columns.

--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -30,6 +30,7 @@ body#overboot {
   }
 
   table {
+    text-align: center;
     white-space: nowrap;
 
     &.link-table {
